@@ -4,9 +4,10 @@ Revision history for firebird_fdw
 	- Push down bitwise operators << and >> (FB 2.1 and later)
 	- Push down two-argument form of SUBSTRING()
 	- Push down CONCAT()
+	- Push down POSITION() / STRPOS()
 	- Don't check for mutable functions - we are explicitly
 	  whitelisting functions which can be pushed down
-	  (need to double-chekc if that's a valid approach)
+	  (need to double-check if that's a valid approach)
 
 0.1.5   2014-01-20
 	- Add basic Firebird version detection to ensure that only
